@@ -1,3 +1,8 @@
+2006-05-20  Matthias Wimmer  <m@tthias.eu>
+
+    * jabberd/lib/jabberdlib.h: better memory performance for xhash
+    * jabberd/lib/xhash.c: same
+
 2006-05-05  Matthias Wimmer  <m@tthias.eu>
 
     * jsm/modules/mod_offline.c: mod_offline serialization
